--- a/Products/feedfeeder/locales/manual.pot
+++ b/Products/feedfeeder/locales/manual.pot
@@ -4,7 +4,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: feedfeeder 2.1\n"
-"POT-Creation-Date: 2012-12-21 23:24+0000\n"
+"POT-Creation-Date: 2012-12-21 22:53+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI +ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -15,27 +15,18 @@ msgstr ""
 "Language-Code: en\n"
 "Language-Name: English\n"
 "Preferred-Encodings: utf-8 latin1\n"
-"Domain: plone\n"
+"Domain: feedfeeder\n"
 
-#: profiles/default/portal_atct.xml
-#: profiles/registry/registry.xml
-msgid "Date that the FeedItem was last updated."
+#: configure.zcml
+msgid "Feedfeeder registry"
 msgstr ""
 
-#: profiles/registry/registry.xml
-msgid "Dates"
+msgid "Feedfeeder"
 msgstr ""
 
-#: profiles/default/types/FeedfeederFolder.xml
-msgid "Edit"
+msgid "Profile for registry settings of Feedfeeder"
 msgstr ""
 
-#: profiles/default/portal_atct.xml
-#: profiles/registry/registry.xml
-msgid "FeedItem Updated"
-msgstr ""
-
-#: profiles/default/types/FeedfeederFolder.xml
-msgid "View"
+msgid "Turn external feed entries into content items"
 msgstr ""
 
