--- a/Products/feedfeeder/locales/nl/LC_MESSAGES/feedfeeder.po
+++ b/Products/feedfeeder/locales/nl/LC_MESSAGES/feedfeeder.po
@@ -94,7 +94,7 @@ msgstr "Objectids"
 #. Default: "When updating this feed's item the transition selected below will be performed."
 #: ./content/folder.py:34
 msgid "help_default_transition"
-msgstr "Tijdens het updaten van een item uit deze feed wordt de transitie uitgevoerd die beneded geselecteerd is."
+msgstr "Tijdens het updaten van een item uit deze feed wordt de transitie uitgevoerd die beneden geselecteerd is."
 
 #. Default: "If checked the feed item will be automatically redirected if you don't have the edit permission."
 #: ./content/folder.py:24
