--- a/Products/feedfeeder/locales/es/LC_MESSAGES/feedfeeder.po
+++ b/Products/feedfeeder/locales/es/LC_MESSAGES/feedfeeder.po
@@ -1,13 +1,14 @@
 # ArchGenXML generated POT File
 # Reinout van Rees <reinout@zestsoftware.nl>, 2006.
 # Leonardo Caballero <leonardocaballero@gmail.com>, 2008, 2009.
+# Manuel Gualda Caballero <manuel@minombre.es>, 2014.
 msgid ""
 msgstr ""
 "Project-Id-Version: feedfeeder\n"
 "POT-Creation-Date: 2012-12-21 23:24+0000\n"
-"PO-Revision-Date: 2009-08-11 17:21-0400\n"
-"Last-Translator: Leonardo Caballero <leonardocaballero@gmail.com>\n"
-"Language-Team: Spanish <plone-conosur@lists.plone.org>\n"
+"PO-Revision-Date: 2014-12-06 16:11-0100\n"
+"Last-Translator: Manuel Gualda Caballero <manuel@minombre.es>\n"
+"Language-Team: Spanish <plone-usuarios-plone@lists.plone.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -21,88 +22,87 @@ msgstr ""
 #: ./content/folder.py:109
 #: ./content/item.py:112
 msgid "Automatic transition triggered by FeedFolder"
-msgstr ""
+msgstr "Transición automática iniciada por FeedFolder"
 
 #: ./profiles/default/types/FeedfeederFolder.xml
 msgid "Feed Folder"
-msgstr ""
+msgstr "Carpeta de fuentes"
 
 #: ./profiles/default/types/FeedFeederItem.xml
 msgid "Feed Item"
-msgstr ""
+msgstr "Elemento de fuente"
 
 #: ./browser/feed.py:48
 msgid "Feed items updated"
-msgstr ""
+msgstr "Elementos de la fuente actualizados"
 
 msgid "Feedfeeder"
-msgstr ""
+msgstr "Feedfeeder"
 
 #: configure.zcml
 msgid "Feedfeeder registry"
-msgstr ""
+msgstr "Registro de FeedFeeder"
 
 #: ./content/folder.py:67
 msgid "Keep initial state"
-msgstr ""
+msgstr "Mantener el estado inicial"
 
 msgid "Profile for registry settings of Feedfeeder"
-msgstr ""
+msgstr "Perfil para la configuración de registro de Feedfeeder"
 
 msgid "Turn external feed entries into content items"
-msgstr ""
+msgstr "Convertir entradas de la fuente externa en elementos de contenido"
 
 #: ./profiles/default/actions.xml
 msgid "Update Feed Items"
-msgstr ""
+msgstr "Actualizar los elementos de la fuente"
 
 #. Default: "Feeditemauthor"
 #: ./content/item.py:25
 msgid "feedfeeder_label_feedItemAuthor"
-msgstr "Autor del canal"
+msgstr "Autor del elemento de la fuente"
 
 #. Default: "Feeditemupdated"
 #: ./content/item.py:33
 msgid "feedfeeder_label_feedItemUpdated"
-msgstr "Elemento de canal actualizado"
+msgstr "Elemento de la fuente actualizado"
 
 #. "Feed Title"
 #. Default: "Feed Title"
 #: ./content/item.py:62
 msgid "feedfeeder_label_feedTitle"
-msgstr ""
+msgstr "Título de la fuente"
 
 #. Default: "Feeds"
 #: ./content/folder.py:17
 msgid "feedfeeder_label_feeds"
-msgstr "Canales"
+msgstr "Fuentes"
 
 #. Default: "Has body text"
 #: ./content/item.py:55
 msgid "feedfeeder_label_hasbody"
-msgstr ""
+msgstr "Tiene texto de cuerpo"
 
 #. Default: "Link"
 #: ./content/item.py:41
-#, fuzzy
 msgid "feedfeeder_label_link"
-msgstr "Enlaces"
+msgstr "Enlace"
 
 #. Default: "Object Ids"
 #: ./content/item.py:48
 msgid "feedfeeder_label_objectids"
-msgstr ""
+msgstr "IDs de objeto"
 
 #. "When updating this feed's item the transition selected below will be performed."
 #. Default: "When updating this feed's item the transition selected below will be performed."
 #: ./content/folder.py:34
 msgid "help_default_transition"
-msgstr "Cuando se actualice este elemento de canal la transición seleccionada será efectuada"
+msgstr "La transición seleccionada será realizada cuando se actualice este elemento de la fuente."
 
 #. Default: "If checked the feed item will be automatically redirected if you don't have the edit permission."
 #: ./content/folder.py:24
 msgid "help_redirect"
-msgstr ""
+msgstr "Si está marcado, usted será automáticamente redirigido al elemento de la fuente si no tiene permiso de edición."
 
 #. 'Default transition'
 #. Default: "Default transition"
@@ -113,20 +113,20 @@ msgstr "Transición por defecto"
 #. Default: "Automatic redirect of feed items"
 #: ./content/folder.py:25
 msgid "label_redirect"
-msgstr ""
+msgstr "Redirección automática a los elementos de la fuente"
 
 #. Default: "This item does not have any body text, click the edit tab to change it."
 #: ./browser/feed-item.pt:13
 msgid "no_body_text"
-msgstr ""
+msgstr "Este elemento not tiene ningún texto de cuerpo: pulse en la pestaña de edición para cambiarlo."
 
 #. Default: "Source available here."
 #: ./browser/feed-item.pt:37
 msgid "source_available_here"
-msgstr ""
+msgstr "Fuente original"
 
 #. Default: "Test view showing the latest items from the feeds"
 #: ./skins/feedfeeder/latest_items.pt:7
 msgid "test_view_title"
-msgstr "Vista de prueba mostrando los últimos elementos de los canales"
+msgstr "Vista de prueba mostrando los últimos elementos de las fuentes"
 
