--- a/Products/feedfeeder/locales/es/LC_MESSAGES/plone.po
+++ b/Products/feedfeeder/locales/es/LC_MESSAGES/plone.po
@@ -1,13 +1,13 @@
 # translation of feedfeeder-plone.po to Spanish
 # Leonardo Caballero <leonardocaballero@gmail.com>, 2009.
-# Spanish translation team Plone Cono Sur <plone-conosur@lists.plone.org>
+# Manuel Gualda Caballero <manuel@minombre.es>, 2014.
 msgid ""
 msgstr ""
 "Project-Id-Version: feedfeeder\n"
 "POT-Creation-Date: 2012-12-21 23:24+0000\n"
-"PO-Revision-Date: 2009-08-11 17:21-0400\n"
-"Last-Translator: Leonardo Caballero <leonardocaballero@gmail.com>\n"
-"Language-Team: Plone Cono Sur <plone-conosur@lists.plone.org>\n"
+"PO-Revision-Date: 2014-12-06 16:15-0100\n"
+"Last-Translator: Manuel Gualda Caballero <manuel@minombre.es>\n"
+"Language-Team: Spanish <plone-usuarios-plone@lists.plone.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -21,22 +21,22 @@ msgstr ""
 #: profiles/default/portal_atct.xml
 #: profiles/registry/registry.xml
 msgid "Date that the FeedItem was last updated."
-msgstr ""
+msgstr "Fecha de última actualización del elemento de la fuente."
 
 #: profiles/registry/registry.xml
 msgid "Dates"
-msgstr ""
+msgstr "Fechas"
 
 #: profiles/default/types/FeedfeederFolder.xml
 msgid "Edit"
-msgstr ""
+msgstr "Editar"
 
 #: profiles/default/portal_atct.xml
 #: profiles/registry/registry.xml
 msgid "FeedItem Updated"
-msgstr ""
+msgstr "Elemento de la fuente actualizado"
 
 #: profiles/default/types/FeedfeederFolder.xml
 msgid "View"
-msgstr ""
+msgstr "Ver"
 
